--- a/Proyecto-Angular/src/app/components/header/header.component.html
+++ b/Proyecto-Angular/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
-<header appScroll> 
-    <nav class="navbar navbar-expand-xl fixed-top p-1" id="menu">        
+<header> 
+    <nav class="navbar navbar-expand-xl fixed-top p-1" id="menu" appScroll>        
         <div class="container-fluid">
             <a class="navbar-brand ms-3" (click)="contraerNav()" href="#">
                 <img id="logo" src="../assets/logo2.png">                
