--- a/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
+++ b/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
@@ -1,18 +1,79 @@
 <section class="d-flex justify-content-center align-items-center" id="acerca de mi">
-    <div class="card my-3" style="width: 80%;" >
-        <div class="card-body" id="parent" >                        
-            <h3 class="card-title" style="display: inline-block; color: lightblue !important"><strong>Acerca de mí</strong></h3>
-            <div style="display: inline-block; margin-left: 60%; position: relative;"  (click)="activarInput()">
-                <a href=#>
-                    <fa-icon [icon]="faSquarePen" style="font-size:30px; color:rgb(36, 95, 184) !important"></fa-icon>
-                </a>
-            </div>                                                               
-            <p class="card-text" >Estudiante de Desarrollo Web y Aplicaciones Digitales. Como 
-            desafío personal estoy buscando mi primera experiencia
-            laboral en el área de IT para poder aplicar mis conocimientos en un equipo de trabajo y
-            crecer profesionalmente.</p>  
-            <input *ngIf="inputEstado" placeholder="Ingrese el nuevo texto" id="input_parrafo" style="width:100%" > 
-            <input  style="width:100%;display: none">                                                          
-        </div>             
+    <div class="card" id="container">
+        <div class="card-title d-flex justify-content-between align-items-center">                        
+            <h3><strong>{{titulo}}</strong></h3>                          
+            <fa-icon
+                    *ngIf="modoEdicion" 
+                    [icon]="faSquarePen"
+                    data-bs-toggle="modal" 
+                    data-bs-target="#acercademi-modal">
+            </fa-icon> 
+        </div>        
+        <div>
+            <p class="card-text">{{texto}}</p> 
+        </div>                                                                     
+    </div>    
+
+
+    <!-- MODAL TÍTULO Y TEXTO -->
+
+    <div 
+    class="modal fade modal-lg"      
+    id="acercademi-modal" tabindex="-1" 
+    aria-labelledby="textoModalLabel"
+    aria-hidden="true"
+    >
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header justify-content-center">
+                    <h3 class="modal-title textoModal" id="textoModalLabel">Editar Título y Texto</h3>                        
+                </div>
+                <div class="modal-body">                                 
+                    <div class="d-flex">
+                        <label for="user" class="form-label etiquetaModal">Título actual</label>
+                        <p class="etiquetaModal" id="titulo"><b>{{titulo}}</b></p>                    
+                    </div>
+                    <div class="d-flex align-items-baseline mb-3">
+                        <label for="user" class="form-label etiquetaModal">Nuevo título</label>
+                        <input 
+                            #nuevoTitulo 
+                            type="text" 
+                            class="form-control inputModal" 
+                            placeholder="Ingrese nuevo título">
+                    </div> 
+                    <div class="d-flex align-items-baseline">
+                        <label for="user" class="form-label etiquetaModal">Texto actual</label>
+                        <p class="textoModal etiquetaModal2"><b>{{texto}}</b></p>                                       
+                    </div>
+                    <div class="d-flex align-items-center mb-1">
+                        <label for="user" class="form-label etiquetaModal">Nuevo texto</label>
+                        <textarea
+                            #nuevoTexto 
+                            maxlength="300"               
+                            class="form-control inputModal2" 
+                            placeholder="Ingrese nuevo texto">
+                        </textarea> 
+                    </div>                
+                    
+                    <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
+                        <button 
+                            type="button" 
+                            class="btn btn-danger"                            
+                            data-bs-dismiss="modal"
+                            >
+                            Cerrar
+                        </button>
+                        <button 
+                            type="button" 
+                            class="btn btn-primary"                                                      
+                            data-bs-dismiss="modal"
+                            (click)="cambiarTexto()"                           
+                            >
+                            Aceptar
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>    
