--- a/Proyecto-Angular/src/app/components/banner/banner.component.html
+++ b/Proyecto-Angular/src/app/components/banner/banner.component.html
@@ -3,7 +3,8 @@
         id="div-editar-banner"
         class="d-flex align-items-start justify-content-end px-4"
         *ngIf="modoEdicion">
-        <fa-icon 
+        <fa-icon
+            class="iconos-edicion" 
             [icon]="faSquarePen" 
             data-bs-toggle="modal" 
             data-bs-target="#bannerModal">
@@ -16,7 +17,8 @@
     >  
     <div id="sub-container">
         <div class="d-flex justify-content-end align-items-start" *ngIf="modoEdicion">
-            <fa-icon 
+            <fa-icon
+                class="iconos-edicion" 
                 [icon]="faSquarePen"
                 data-bs-toggle="modal" 
                 data-bs-target="#perfilModal">
@@ -27,7 +29,8 @@
             src="../assets/Foto Perfil.jpg"
             #fotoPerfil>
         <div class="d-flex justify-content-end align-items-start pe-2" *ngIf="modoEdicion">
-            <fa-icon 
+            <fa-icon
+                class="iconos-edicion" 
                 [icon]="faSquarePen" 
                 id="editar-texto"
                 data-bs-toggle="modal" 
@@ -36,14 +39,32 @@
         </div>
         <h2>{{titulo}}</h2>
         <h5> {{subtitulo}}</h5>
+    </div>    
+</div>
+<div id="contenedor-iconos-redes">
+    <div class="d-flex">        
+        <button class="botones-redes">
+            <a title="Seguime en Instagram" class="link-redes" target="_blank" href="https://www.instagram.com/julianmeneses1/">
+                <img class="iconos-redes" src="../assets/Instagram.png">
+            </a>
+        </button>
+        <button class="botones-redes" >
+            <a title="Contactame en Linkedin" class="link-redes" target="_blank" href="https://www.linkedin.com/in/juli%C3%A1n-meneses-97316b245/">
+                <img class="iconos-redes" src="../assets/Linkedin.png">
+            </a>
+        </button>
+        <button id="boton-github">
+            <a title="Mira mi perfil en GitHub" target="_blank" href="https://github.com/JulianMeneses1">
+                <img id="icono-github" src="../assets/GitHub2.png">
+            </a>
+        </button>      
     </div>
 </div>
 
 <!-- MODAL IMAGEN BANNER -->
 
 <div 
-    class="modal fade" 
-    [ngClass]="{'modal-lg': pantallaGrande}"  
+    class="modal fade modal-lg"     
     id="bannerModal" tabindex="-1" 
     aria-labelledby="bannerModalLabel"
     aria-hidden="true"
@@ -58,26 +79,23 @@
                     <label for="user"  class="form-label me-5 textoModal">Imagen actual</label>
                     <img class="imagenEdicion" src="../assets/Banner.jpg">
                 </div>                        
-                <label for="user" class="form-label textoModal">Nueva Imagen</label>
-                <div class="d-flex align-items-baseline mb-3">                            
-                    <input class="inputEdicion" (change)="capturarImagen($event)" type="file">
-                    <label class="textoModal">{{nombreArchivo}}</label>                            
-                </div>                        
-                <img *ngIf="previsualizacionImagen" class="imagenEdicion mb-3" [src]="previsualizacionImagen">
-                
+                <div class="mb-2">
+                    <label for="user" class="form-label textoModal me-4">Nueva Imagen</label>                                               
+                    <input class="inputEdicion me-2" (change)="capturarImagen($event)" type="file">
+                    <label class="textoModal">{{nombreArchivo}}</label>             
+                </div>
+                <img *ngIf="previsualizacionImagen" class="imagenEdicion mb-1" [src]="previsualizacionImagen">
                 <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
                     <button 
                         type="button" 
-                        class="btn btn-danger" 
-                        [ngClass]="{'btn-lg': pantallaGrande}" 
+                        class="btn btn-danger"                        
                         data-bs-dismiss="modal"
                         (click)="eliminarImagen()">
                         Cerrar
                     </button>
                     <button 
                         type="button" 
-                        class="btn btn-primary" 
-                        [ngClass]="{'btn-lg': pantallaGrande}"                            
+                        class="btn btn-primary"                                                   
                         data-bs-dismiss="modal"
                         (click)="cambiarBanner()">
                         Aceptar
@@ -91,8 +109,7 @@
 <!-- MODAL IMAGEN PERFIL -->
 
 <div 
-    class="modal fade" 
-    [ngClass]="{'modal-lg': pantallaGrande}"  
+    class="modal fade modal-lg"     
     id="perfilModal" tabindex="-1" 
     aria-labelledby="perfilModalLabel"
     aria-hidden="true"
@@ -107,26 +124,23 @@
                     <label for="user" class="form-label me-5 textoModal">Imagen actual</label>
                     <img class="imagenEdicion" src="../assets/Foto Perfil.jpg">
                 </div>                        
-                <label for="user" class="form-label textoModal">Nueva Imagen</label>
-                <div class="d-flex align-items-baseline mb-3">                            
-                    <input class="inputEdicion" (change)="capturarImagen($event)" type="file">
-                    <label class="textoModal">{{nombreArchivo}}</label>                            
-                </div>                        
-                <img *ngIf="previsualizacionImagen" class="imagenEdicion mb-3" [src]="previsualizacionImagen">
-                
+                <div class="mb-2">
+                    <label for="user" class="form-label textoModal me-4">Nueva Imagen</label>
+                    <input class="inputEdicion me-2" (change)="capturarImagen($event)" type="file">
+                    <label class="textoModal">{{nombreArchivo}}</label> 
+                </div>                          
+                <img *ngIf="previsualizacionImagen" class="imagenEdicion mb-1" [src]="previsualizacionImagen">
                 <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
                     <button 
                         type="button" 
                         class="btn btn-danger" 
-                        [ngClass]="{'btn-lg': pantallaGrande}" 
                         data-bs-dismiss="modal"
                         (click)="eliminarImagen()">
                         Cerrar
                     </button>
                     <button 
                         type="button" 
-                        class="btn btn-primary" 
-                        [ngClass]="{'btn-lg': pantallaGrande}"                            
+                        class="btn btn-primary"                          
                         data-bs-dismiss="modal"
                         (click)="cambiarFotoPerfil()">
                         Aceptar
@@ -137,11 +151,10 @@
     </div>
 </div>
 
-<!-- MODAL Titulo y Subtitulo -->
+<!-- MODAL TÍTULO y SUBTÍTULO -->
 
 <div 
-    class="modal fade" 
-    [ngClass]="{'modal-lg': pantallaGrande}"  
+    class="modal fade modal-lg"     
     id="textoModal" tabindex="-1" 
     aria-labelledby="textoModalLabel"
     aria-hidden="true"
@@ -172,16 +185,14 @@
                 <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
                     <button 
                         type="button" 
-                        class="btn btn-danger" 
-                        [ngClass]="{'btn-lg': pantallaGrande}" 
+                        class="btn btn-danger"                        
                         data-bs-dismiss="modal"
                         >
                         Cerrar
                     </button>
                     <button 
                         type="button" 
-                        class="btn btn-primary" 
-                        [ngClass]="{'btn-lg': pantallaGrande}"                            
+                        class="btn btn-primary"                                                   
                         data-bs-dismiss="modal"
                         (click)="cambiarTexto()"
                         >
