--- a/Proyecto-Angular/src/app/components/banner/banner.component.html
+++ b/Proyecto-Angular/src/app/components/banner/banner.component.html
@@ -28,7 +28,7 @@
             id="foto-perfil" 
             src="../assets/Foto Perfil.jpg"
             #fotoPerfil>
-        <div class="d-flex justify-content-end align-items-start pe-2" *ngIf="modoEdicion">
+        <div class="d-flex justify-content-end align-items-start ps-2 pb-2" *ngIf="modoEdicion">
             <fa-icon
                 class="iconos-edicion" 
                 [icon]="faSquarePen" 
