efecto fade y seccion conocimientos

--- a/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
+++ b/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
@@ -1,6 +1,6 @@
-<section class="d-flex justify-content-center align-items-center" id="acerca de mi">
-    <div class="card" id="container">
-        <div class="card-title d-flex justify-content-between align-items-center">                        
+<section class="d-flex justify-content-center align-items-center" id="acerca de mi" appScrollAcercaDeMi >
+    <div class="card" id="container"  >
+        <div class="my-2 d-flex justify-content-between align-items-center" >                        
             <h3><strong>{{titulo}}</strong></h3>                          
             <fa-icon
                     *ngIf="modoEdicion" 
