--- a/Proyecto-Angular/src/app/components/banner/banner.component.html
+++ b/Proyecto-Angular/src/app/components/banner/banner.component.html
@@ -55,7 +55,7 @@
         </button>
         <button id="boton-github">
             <a title="Mira mi perfil en GitHub" target="_blank" href="https://github.com/JulianMeneses1">
-                <img id="icono-github" src="../assets/GitHub2.png">
+                <img id="icono-github" src="../assets/GitHub.png">
             </a>
         </button>      
     </div>
