--- a/Proyecto-Angular/src/app/components/footer/footer.component.html
+++ b/Proyecto-Angular/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="d-flex align-items-center justify-content-center" id="iconos">                
         <a href="#" class="mx-2"><img src="../assets/Instagram.png"></a>
         <a href="#" class="mx-2"><img src="../assets/Linkedin.png" ></a>
-        <a href="#" class="mx-2"><img src="../assets/GitHub2.png" style="height:50px"></a>
+        <a href="#" class="mx-2"><img src="../assets/GitHub.png" style="height:60px"></a>
     </div>
       
 </footer>
