--- a/Proyecto-Angular/src/app/components/acercademi/acercademi.component.css
+++ b/Proyecto-Angular/src/app/components/acercademi/acercademi.component.css
@@ -1,5 +1,19 @@
 #container {
-    width: 65% 
+    width: 70%;        
+}
+
+section {
+    transform: translateY(0px);
+    opacity: 0;
+    transition: all 0.5s ease 
+}
+
+
+.animacion-seccion{    
+    transform: translateY(50px) !important;
+    opacity: 1 !important;
+    transition: all 0.5s ease;   
+            
 }
 
 h3 { 
@@ -37,5 +51,8 @@ fa-icon{
 .inputModal {
     width: 70%
 }
+
+
+
 
     
