--- a/Proyecto-Angular/src/app/components/header/header.component.html
+++ b/Proyecto-Angular/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <header> 
-    <nav class="navbar navbar-expand-xl fixed-top p-1" id="menu" appScroll>        
+    <nav class="navbar navbar-expand-xl fixed-top p-1" id="menu" appScrollMenu>        
         <div class="container-fluid">
             <a class="navbar-brand ms-3" (click)="contraerNav()" href="#">
-                <img id="logo" src="../assets/logo2.png">                
+                <img id="logo" src="../assets/Logo.png">                
             </a>
             <button 
                 class="navbar-toggler me-1" 
