--- a/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
+++ b/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
@@ -1,5 +1,5 @@
-<section class="d-flex justify-content-center align-items-center" id="acerca de mi" appScrollAcercaDeMi >
-    <div class="card" id="container"  >
+<section class="d-flex justify-content-center align-items-center" id="acerca de mi"  >
+    <div class="card" id="container" appScrollAcercaDeMi>
         <div class="my-2 d-flex justify-content-between align-items-center" >                        
             <h3><strong>{{titulo}}</strong></h3>                          
             <fa-icon
