--- a/Proyecto-Angular/src/app/components/conocimientos/conocimientos.component.css
+++ b/Proyecto-Angular/src/app/components/conocimientos/conocimientos.component.css
@@ -1,5 +1,8 @@
 #container {
     width: 70%;
+    opacity: 0;
+    transform: translateY(0px);
+    transition: all 0.5s ease
 }
 
 h3{
@@ -19,12 +22,6 @@ h3{
 
 .conocimientos-iconos {
     width: 35%;
-}
-
-section {
-    opacity: 0;
-    transform: translateY(0px);
-    transition: all 0.5s ease
 }
 
 .animacion-seccion{    
@@ -51,6 +48,14 @@ fa-icon{
 
 .inputModal {
     width: 70%
+}
+
+.imagenEdicion{
+    height: 8em;
+}
+
+.inputEdicion{
+    width: 11em
 }
 
 
