--- a/Proyecto-Angular/src/app/components/conocimientos/conocimientos.component.html
+++ b/Proyecto-Angular/src/app/components/conocimientos/conocimientos.component.html
@@ -1,19 +1,21 @@
-<section  class="d-flex justify-content-center align-items-center" id="conocimientos" appScrollConocimientos>
-    <div class="card" id="container" >
+<section  class="d-flex justify-content-center align-items-center" id="conocimientos" >
+    <div class="card" id="container" appScrollConocimientos >
         <div class="my-2 d-flex justify-content-between align-items-center">
             <h3><strong>{{titulo}}</strong></h3>
             <div>
                 <fa-icon 
                     [icon]="faPlus" 
                     *ngIf="modoEdicion" 
-                    class="iconos-edicion">
+                    class="iconos-edicion"
+                    data-bs-toggle="modal" 
+                    data-bs-target="#conocimiento-modal">
                 </fa-icon> 
                 <fa-icon
                     class="iconos-edicion"
                     *ngIf="modoEdicion" 
                     [icon]="faSquarePen"
                     data-bs-toggle="modal" 
-                    data-bs-target="#conocimientos-modal">
+                    data-bs-target="#titulo-modal">
                 </fa-icon>
             </div>
             
@@ -33,7 +35,7 @@
 
     <div 
     class="modal fade modal-lg"      
-    id="conocimientos-modal" tabindex="-1" 
+    id="titulo-modal" tabindex="-1" 
     aria-labelledby="textoModalLabel"
     aria-hidden="true"
     >
@@ -76,6 +78,66 @@
                 </div>
             </div>
         </div>
-    </div>                                        
+    </div>
+
+    <!-- MODAL AÑADIR CONOCIMIENTO -->
+
+    <div 
+    class="modal fade modal-lg"      
+    id="conocimiento-modal" tabindex="-1" 
+    aria-labelledby="textoModalLabel"
+    aria-hidden="true"
+    >
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header justify-content-center">
+                    <h3 class="modal-title textoModal" id="textoModalLabel">Añadir Conocimiento</h3>                        
+                </div>
+                <div class="modal-body">                           
+                    
+                    <div class="d-flex align-items-baseline mb-3">
+                        <label for="user" class="form-label etiquetaModal">Nombre</label>
+                        <input 
+                            #nuevoTitulo 
+                            type="text" 
+                            class="form-control inputModal" 
+                            placeholder="Ingrese nombre">
+                    </div>
+                    <div class="d-flex align-items-baseline mb-3">
+                        <label for="user" class="form-label etiquetaModal">Nivel</label>
+                        <input 
+                            #nuevoTitulo 
+                            type="text" 
+                            class="form-control inputModal" 
+                            placeholder="Ingrese nivel de progreso (entre 10 y 90)">
+                    </div>
+
+                    <div class="mb-2">
+                        <label for="user" class="form-label etiquetaModal">Imagen</label>                                               
+                        <input class="inputEdicion me-2" (change)="capturarImagen($event)" type="file">
+                        <label class="textoModal">{{nombreArchivo}}</label>             
+                    </div>
+                    <img *ngIf="previsualizacionImagen" class="imagenEdicion mb-1" [src]="previsualizacionImagen">                 
+                    
+                    <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
+                        <button 
+                            type="button" 
+                            class="btn btn-danger"                            
+                            data-bs-dismiss="modal"
+                            >
+                            Cerrar
+                        </button>
+                        <button 
+                            type="button" 
+                            class="btn btn-primary"                                                      
+                            data-bs-dismiss="modal"                                                       
+                            >
+                            Aceptar
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>                                               
 </section>
 
