--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
@@ -1,11 +1,148 @@
-<section id="experiencia laboral" class="d-flex justify-content-center align-items-center">
-    <div class="card my-3" style="width: 50%;">
-        <div class="card-body">
-          <h3 class="card-title"><strong>Experiencia laboral</strong></h3>
-          <p class="card-text">Estudiante de Desarrollo Web y Aplicaciones Digitales. Como 
-            desafío personal estoy buscando mi primera experiencia
-            laboral en el área de IT para poder aplicar mis conocimientos en un equipo de trabajo y
-            crecer profesionalmente.</p>                  
+<section class="d-flex justify-content-center align-items-center" id="experiencia laboral" >
+    <div class="card" id="container" appScrollExpLaboral>
+        <div class="my-2 d-flex justify-content-between align-items-center">
+            <h3><strong>{{titulo}}</strong></h3>
+            <div>
+                <fa-icon 
+                    [icon]="faPlus" 
+                    *ngIf="modoEdicion" 
+                    data-bs-toggle="modal" 
+                    data-bs-target="#experiencia-modal">
+                </fa-icon> 
+                <fa-icon
+                    *ngIf="modoEdicion" 
+                    [icon]="faSquarePen"
+                    data-bs-toggle="modal" 
+                    data-bs-target="#titulo-modal">
+                </fa-icon>
+            </div>
+            
+        </div>
+        <div class="d-flex">
+            <div class="w-25">
+                <div *ngFor="let experiencia of experiencias">
+                    <div class="m-3">{{experiencia.empresa}}</div>               
+                </div>
+            </div>
+            <div class="w-75">
+                <app-experiencia-laboral-item            
+                    *ngFor="let experiencia of experiencias"
+                    [experiencia]="experiencia">
+                </app-experiencia-laboral-item>
+            </div>  
+        </div>              
+    </div>
+
+
+    <!-- MODAL TITULO -->
+
+    <div 
+    class="modal fade modal-lg"      
+    id="titulo-modal" tabindex="-1" 
+    aria-labelledby="textoModalLabel"
+    aria-hidden="true"
+    >
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header justify-content-center">
+                    <h3 class="modal-title textoModal" id="textoModalLabel">Editar Título</h3>                        
+                </div>
+                <div class="modal-body">                                 
+                    <div class="d-flex">
+                        <label for="user" class="form-label etiquetaModal">Título actual</label>
+                        <p class="etiquetaModal" id="titulo"><b>{{titulo}}</b></p>                    
+                    </div>
+                    <div class="d-flex align-items-baseline mb-3">
+                        <label for="user" class="form-label etiquetaModal">Nuevo título</label>
+                        <input 
+                            #nuevoTitulo 
+                            type="text" 
+                            class="form-control inputModal" 
+                            placeholder="Ingrese nuevo título">
+                    </div>                 
+                    
+                    <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
+                        <button 
+                            type="button" 
+                            class="btn btn-danger"                            
+                            data-bs-dismiss="modal"
+                            >
+                            Cerrar
+                        </button>
+                        <button 
+                            type="button" 
+                            class="btn btn-primary"                                                      
+                            data-bs-dismiss="modal"
+                            (click)="cambiarTitulo()"                           
+                            >
+                            Aceptar
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
+    <!-- MODAL AÑADIR EXPERIENCIA -->
+
+    <div 
+    class="modal fade modal-lg"      
+    id="experiencia-modal" tabindex="-1" 
+    aria-labelledby="textoModalLabel"
+    aria-hidden="true"
+    >
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header justify-content-center">
+                    <h3 class="modal-title textoModal" id="textoModalLabel">Añadir Experiencia</h3>                        
+                </div>
+                <div class="modal-body">                           
+                    
+                    <div class="d-flex align-items-baseline mb-3">
+                        <label for="user" class="form-label etiquetaModal">Puesto</label>
+                        <input 
+                            #nuevoTitulo 
+                            type="text" 
+                            class="form-control inputModal" 
+                            placeholder="Ingrese nombre">
+                    </div>
+                    <div class="d-flex align-items-baseline mb-3">
+                        <label for="user" class="form-label etiquetaModal">Puesto</label>
+                        <input 
+                            #nuevoTitulo 
+                            type="text" 
+                            class="form-control inputModal" 
+                            placeholder="Ingrese nombre">
+                    </div>
+                    <div class="d-flex align-items-baseline mb-3">
+                        <label for="user" class="form-label etiquetaModal">Nivel</label>
+                        <input 
+                            #nuevoTitulo 
+                            type="text" 
+                            class="form-control inputModal" 
+                            placeholder="Ingrese nivel de progreso (entre 10 y 90)">
+                    </div>
+
+                    
+                    <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
+                        <button 
+                            type="button" 
+                            class="btn btn-danger"                            
+                            data-bs-dismiss="modal"
+                            >
+                            Cerrar
+                        </button>
+                        <button 
+                            type="button" 
+                            class="btn btn-primary"                                                      
+                            data-bs-dismiss="modal"                                                       
+                            >
+                            Aceptar
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>                                               
 </section>
+
