--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral-item/experiencia-laboral-item.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral-item/experiencia-laboral-item.component.html
@@ -1,4 +1,4 @@
-<div class="my-3">
+<div>
     <div class="d-flex align-items-center justify-content-between me-5">
         <div class="d-flex align-items-center">
             <label>{{experiencia.puesto}}</label>
