--- a/Proyecto-Angular/src/styles.css
+++ b/Proyecto-Angular/src/styles.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 :root {
-    --skills-bar-length: 0%
+    --skills-bar-length: 0%;
+    --exp-bar-position: 0px
 }
 
 body {
