resetear inputs al cerrar modales

--- a/Proyecto-Angular/src/app/components/banner/banner.component.html
+++ b/Proyecto-Angular/src/app/components/banner/banner.component.html
@@ -187,6 +187,7 @@
                         type="button" 
                         class="btn btn-danger"                        
                         data-bs-dismiss="modal"
+                        (click)="resetearInputs()"
                         >
                         Cerrar
                     </button>
