--- a/Proyecto-Angular/src/app/components/conocimientos/conocimientos.component.css
+++ b/Proyecto-Angular/src/app/components/conocimientos/conocimientos.component.css
@@ -22,6 +22,10 @@ fa-icon{
     cursor: pointer; 
 }
 
+fa-icon:hover{
+    color:lightblue
+}
+
 .textoModal, .etiquetaModal, .inputModal {
     color:black !important
 }
