--- a/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
+++ b/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
@@ -1,6 +1,6 @@
 <section class="d-flex justify-content-center align-items-center" id="acerca de mi"  >
     <div class="card" id="container" appScrollAcercaDeMi>
-        <div class="my-2 d-flex justify-content-between align-items-center" >                        
+        <div class="my-2 d-flex justify-content-between align-items-baseline" >                        
             <h3><strong>{{titulo}}</strong></h3>                          
             <fa-icon
                     *ngIf="modoEdicion" 
@@ -49,10 +49,9 @@
                         <label for="user" class="form-label etiquetaModal">Nuevo texto</label>
                         <textarea
                             #nuevoTexto 
-                            maxlength="300"               
+                            maxlength="300"           
                             class="form-control inputModal2" 
-                            placeholder="Ingrese nuevo texto">
-                        </textarea> 
+                            placeholder="Ingrese nuevo texto"></textarea> 
                     </div>                
                     
                     <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
@@ -60,6 +59,7 @@
                             type="button" 
                             class="btn btn-danger"                            
                             data-bs-dismiss="modal"
+                            (click)="resetearInputs()"
                             >
                             Cerrar
                         </button>
