--- a/Proyecto-Angular/src/app/components/banner/banner.component.css
+++ b/Proyecto-Angular/src/app/components/banner/banner.component.css
@@ -84,6 +84,10 @@ h2, h5{
     cursor: pointer;
 }
 
+.iconos-edicion:hover{
+    color:lightblue   
+}
+
 #editar-texto{
     font-size: 2.5em !important
 }
