--- a/Proyecto-Angular/src/app/components/header/modal-login/modal-login.component.html
+++ b/Proyecto-Angular/src/app/components/header/modal-login/modal-login.component.html
@@ -12,16 +12,16 @@
             <div class="modal-body">
                 <label for="user" class="form-label">Usuario</label>         
                 <input
+                    #usuario
                     class="form-control" 
                     type="text" 
                     id="user" 
                     name="user" 
                     placeholder="Ingrese su usuario" 
                     maxlength="15">
-
                 <label for="password" class="form-label">Contraseña</label>      
-
                 <input
+                    #contraseña
                     class="form-control" 
                     type="password" 
                     id="password" 
@@ -33,13 +33,14 @@
                 <button 
                     type="button" 
                     class="btn btn-danger"                     
-                    data-bs-dismiss="modal">
+                    data-bs-dismiss="modal"
+                    (click)="resetearInputs()">
                     Cerrar
                 </button>
                 <button 
                     type="button" 
                     class="btn btn-primary"                    
-                    (click)="alternarEdicion()"
+                    (click)="alternarEdicion(); resetearInputs()"
                     data-bs-dismiss="modal">
                     Ingresar
                 </button>
