--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral-item/experiencia-laboral-item.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral-item/experiencia-laboral-item.component.html
@@ -1,10 +1,14 @@
+<div class="d-flex align-items-baseline gap-1 container"> 
+        <p id="titulo">{{experiencia.puesto}}</p>                        
+        <div class="d-flex gap-1">
+                <p>@</p>
+                <a href="{{experiencia.url_empresa}}" target="_blank">{{experiencia.empresa}}</a>
+        </div>                        
+</div>
+<div>
+        <p id="duracion">{{experiencia.fecha_inicio}} - {{experiencia.fecha_fin}}</p>
+        <p>{{experiencia.descripcion}}</p>
+</div>
 
-    <div class="d-flex align-items-center justify-content-between me-5">
-        
-            <label>{{experiencia.puesto}}</label>
-            
-       
-            
-    </div>
     
        
