--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.css
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.css
@@ -67,6 +67,53 @@ fa-icon:hover{
     width: 70%;
 }
 
+.container-primer-exp{
+    margin-top: 6px
+}
+
+#titulo-primer-exp {
+    font-weight:bold;
+    color:white !important
+}
+
+#duracion-primer-exp {
+    font-size:14px; 
+    margin-top:-10px
+}
+
+.container-primer-exp>div>p, a{
+    color: lightblue;
+}
+
+
+a:link, a:visited{
+    color: lightblue;
+    text-decoration: none;
+}
+
+a {
+    display: inline-block;
+    position: relative
+}
+
+a::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px ;
+    left: 0;
+    bottom: 40%;
+    background-color: lightblue;
+    transform-origin: bottom left;
+    transform: scaleX(0);
+    transition: transform 0.3s ease-out
+}
+
+a:hover::after{
+    transform-origin: bottom left;
+    transform: scaleX(1)
+}
+
 .boton-exp-item {
     background-color: black;
     color: white;
@@ -81,16 +128,12 @@ fa-icon:hover{
 }
 
 .boton-exp-item-seleccionado {
-    color: rgb(188, 230, 248)   
-}
-
-.boton-exp-item:focus{
-    color:rgb(188, 230, 248)    
+    color: rgb(188, 230, 248)      
 }
 
 .boton-exp-item:hover{
-    background-color: #030f22;
-    color:rgb(188, 230, 248)    
+    color:rgb(188, 230, 248);
+    background-color: #495670;    
 }
 
 .lista-seleccion {
@@ -105,26 +148,63 @@ fa-icon:hover{
 }
 
 .animacion-lista-seleccion{    
-    transform: translateY(var(--exp-bar-position));    
+    transform: translateY(var(--exp-bar-position-Y));    
     transition: transform 0.25s ease;           
 } 
 
-.exp-bar--45 {
-    --exp-bar-position:45px;
+.exp-bar-Y--45 {
+    --exp-bar-position-Y:45px
 }
 
-.exp-bar--90 {
-    --exp-bar-position:90px;
+.exp-bar-Y--90 {
+    --exp-bar-position-Y:90px
 }
 
 
 @media screen and (max-width: 1050px) {
 
-    .container-lista-exp {
-        width: auto !important     
-    } 
-    .boton-exp-item{
-        margin-bottom: 4px;
+    #container-items-lista-exp{
+        display: block !important
+
     }
-   
+    .container-items-exp{
+        width: 100%;
+    }
+    .container-primer-exp{
+        display:block !important;
+        margin-top: 20px
+    }
+    a::after{
+        bottom: 7%
+    }
+    a {
+        margin-bottom: 30px
+    }
+    .container-lista-exp {
+        display: flex;
+        margin-right: 0px !important;
+        width: 100% !important;
+        overflow-x: auto ;
+        overflow-y: hidden      
+    }
+
+    .boton-exp-item{
+        border-left: none !important;
+        min-width: 150px;
+        height: auto;          
+        padding: 0px 20px !important;
+        text-align: center;          
+        }    
+    .boton-exp-item:hover{        
+        background-color: none    
+    }
+
+    .lista-seleccion {
+        display:none             
+    }
+    .animacion-lista-seleccion{    
+        transform: translateX(var(--exp-bar-position-X)) !important;             
+    } 
 }
+
+   
