formulario añadir experiencias

--- a/Proyecto-Angular/src/app/components/conocimientos/conocimientos.component.html
+++ b/Proyecto-Angular/src/app/components/conocimientos/conocimientos.component.html
@@ -97,7 +97,7 @@
                     <div class="d-flex align-items-baseline mb-3">
                         <label for="user" class="form-label etiquetaModal">Nombre</label>
                         <input 
-                            #nuevoNombre 
+                            #Nombre 
                             type="text" 
                             class="form-control inputModal" 
                             placeholder="Ingrese nombre">
@@ -105,7 +105,7 @@
                     <div class="d-flex align-items-baseline mb-3">
                         <label for="user" class="form-label etiquetaModal">Nivel</label>
                         <input 
-                            #nuevoNivel 
+                            #Nivel 
                             type="text" 
                             class="form-control inputModal" 
                             placeholder="Ingrese nivel de progreso (entre 10 y 90)">
