color de fondo botons exp

--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.css
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.css
@@ -197,8 +197,8 @@ a:hover::after{
         padding: 0px 20px !important;
         text-align: center;          
         }    
-    .boton-exp-item:hover{        
-        background-color: none    
+    .boton-exp-item-seleccionado {
+        background-color: #495670;      
     }
 
     .lista-seleccion {
