--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.css
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.css
@@ -2,7 +2,9 @@
     width: 70%;
     opacity: 0;
     transform: translateY(0px);
-    transition: all 0.5s ease
+    transition: all 0.5s ease;
+    height: 500px;
+    
 }
 
 h3{
