--- a/Proyecto-Angular/src/styles.css
+++ b/Proyecto-Angular/src/styles.css
@@ -61,7 +61,7 @@ footer {
 
 @media screen and (min-width:1400px){
     section {
-        height: 80vh !important
+        min-height: 80vh !important;
     }
     
 }
