--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral-item/experiencia-laboral-item.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral-item/experiencia-laboral-item.component.html
@@ -2,11 +2,11 @@
         <p id="titulo">{{experiencia.puesto}}</p>                        
         <div class="d-flex gap-1">
                 <p>@</p>
-                <a href="{{experiencia.url_empresa}}" target="_blank">{{experiencia.empresa}}</a>
+                <a href="{{experiencia.urlEmpresa}}" target="_blank">{{experiencia.empresa}}</a>
         </div>                        
 </div>
 <div>
-        <p id="duracion">{{experiencia.fecha_inicio}} - {{experiencia.fecha_fin}}</p>
+        <p id="duracion">{{experiencia.fechaInicio}} - {{experiencia.fechaFin}}</p>
         <p>{{experiencia.descripcion}}</p>
 </div>
 
