--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
@@ -44,11 +44,11 @@
                         <p id="titulo-primer-exp">{{experiencias[0].puesto}}</p>                        
                         <div class="d-flex gap-1">
                             <p>@</p>
-                            <a href="{{experiencias[0].url_empresa}}" target="_blank">{{experiencias[0].empresa}}</a> 
+                            <a href="{{experiencias[0].urlEmpresa}}" target="_blank">{{experiencias[0].empresa}}</a> 
                         </div>                       
                     </div>
                     <div>
-                        <p id="duracion-primer-exp">{{experiencias[0].fecha_inicio}} - {{experiencias[0].fecha_fin}}</p>
+                        <p id="duracion-primer-exp">{{experiencias[0].fechaInicio}} - {{experiencias[0].fechaFin}}</p>
                         <p>{{experiencias[0].descripcion}}</p>
                     </div>
                 </div>
